# quagga.euro-ix

./: configure.ac
bgpd/: Makefile.am  bgp.h  bgp_adj_in.c  bgp_adj_in.h  bgp_adj_out.c  bgp_adj_out.h  bgp_advertise.c  bgp_advertise.h  bgp_aspath.c  bgp_aspath.h  bgp_attr.c  bgp_attr.h  bgp_attr_store.c  bgp_attr_store.h  bgp_btoa.c  bgp_clist.c  bgp_clist.h  bgp_clist_vty.c  bgp_clist_vty.h  bgp_cluster.c  bgp_cluster.h  bgp_common.c  bgp_common.h  bgp_community.c  bgp_community.h  bgp_config.c  bgp_config.h  bgp_config_vty.c  bgp_config_vty.h  bgp_connection.c  bgp_connection.h  bgp_damp.c  bgp_damp.h  bgp_debug.c  bgp_debug.h  bgp_dump.c  bgp_dump.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_engine.c  (+78 more)
bgpm/: bgpm_south.h
doc/: bgpd.texi
guile/: guile-bgp.c
isisd/: isis_routemap.c
lib/: Makefile.am  avl.c  avl.h  bitmap.c  bitmap.h  buffer.c  buffer.h  checksum.c  command.c  command.h  command_common.h  command_execute.c  command_execute.h  command_local.h  command_parse.c  command_parse.h  confirm.h  daemon.c  distribute.c  elstring.h  filter.c  filter.h  hash.c  hash.h  heap.c  heap.h  if.c  if.h  if_rmap.c  ihash.c  ihash.h  iovec.h  keychain.c  keyword.c  keyword.h  linklist.c  linklist.h  list_util.c  list_util.h  log.c  (+116 more)
ospf6d/: ospf6_asbr.c
ospfd/: ospf_routemap.c  ospf_te.c  ospf_zebra.c
ripd/: rip_routemap.c  rip_zebra.c  ripd.c
ripngd/: ripng_zebra.c  ripngd.c
tests/: .gitignore  Makefile.am  aspath_test.c  bgp_capability_test.c  bgp_mp_attr_test.c  bgp_mpath_test.c  ecommunity_test.c  heavy-thread.c  heavy-wq.c  main.c  test-avl.c  test-checksum.c  test-heap.c  test-list_util.c  test-pfifo.c  test-pqueue.c  test-prefix.c  test-privs.c  test-qfs.c  test-qlump.c  test-svector.c  test-symtab.c  test-vector.c  test-vhash.c  test_bgp_as_path.c  test_bgp_attr_store.c  test_bgp_cluster.c  test_bgp_community.c  test_bgp_ecommunity.c  test_bgp_unknown.c
vtysh/: extract.pl.in  vtysh.c  vtysh.h  vtysh_config.c  vtysh_main.c  vtysh_user.c  vtysh_user.h
zebra/: client_main.c  connected.c  connected.h  debug.c  if_ioctl.c  if_ioctl_solaris.c  if_proc.c  if_sysctl.c  interface.c  interface.h  ioctl.c  ioctl.h  ioctl_solaris.c  ipforward.h  ipforward_proc.c  ipforward_solaris.c  irdp.h  irdp_interface.c  irdp_main.c  irdp_packet.c  kernel_netlink.c  kernel_null.c  kernel_socket.c  kernel_socket.h  main.c  mtu_kvm.c  redistribute.c  redistribute.h  redistribute_null.c  rib.h  router-id.c  rt.h  rt_ioctl.c  rt_netlink.c  rt_socket.c  rtadv.c  rtadv.h  rtread.h  rtread_getmsg.c  rtread_proc.c  (+6 more)
